added the email and message button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
             <a href="#" class="link">
-                <i class="fa-brands fa-github"></i>
+                <i class="fa-brands fa-github"></i> 
             </a>
 
 
@@ -42,8 +42,8 @@
         </div>
 
         <div class="butons">
-            <div class="email-button"></div>
-            <div class="message-button"></div>
+            <div class="email-button"> E-mail</div>
+            <div class="message-button">Message</div>
         </div>
 
 
